--- a/src/main/resources/RubyRbiClient/api_error_rbi.mustache
+++ b/src/main/resources/RubyRbiClient/api_error_rbi.mustache
@@ -1,3 +1,9 @@
+# typed: strong
+
+=begin
+{{> api_info}}
+=end
+
 module {{moduleName}}
   class ApiError < StandardError
     sig { returns(Integer) }
