--- a/src/main/resources/RubyRbiClient/partial_model_generic_rbi.mustache
+++ b/src/main/resources/RubyRbiClient/partial_model_generic_rbi.mustache
@@ -9,7 +9,23 @@
     sig{ returns({{{rbiDataType}}}) }
     def {{{name}}}; end
 
-    sig { params(arg0: {{{rbiDataType}}}).returns({{{rbiDataType}}}) }
+    {{#isEnum}}
+    {{^isContainer}}
+    # Custom attribute writer method checking allowed values (enum).
+    # @param [{{{rbiDataType}}}] {{{name}}} Object to be assigned
+    {{/isContainer}}
+    {{/isEnum}}
+    {{^isEnum}}
+    {{#hasValidation}}
+    # Custom attribute writer method with validation
+    # @param [{{{rbiDataType}}}] {{{name}}} Value to be assigned
+    {{/hasValidation}}
+    {{/isEnum}}
+    sig do
+      params(
+        arg0: {{^required}}T.nilable({{/required}}{{{rbiDataType}}}{{^required}}){{/required}},
+      ).returns({{{rbiDataType}}})
+    end
     def {{{name}}}=(arg0); end
 
   {{/vars}}
@@ -35,6 +51,43 @@
     end
 
 {{/hasEnums}}
+    # Attribute mapping from ruby-style variable name to JSON key.
+    sig { returns(T::Hash[Symbol, Symbol]) }
+    def self.attribute_map; end
+
+    # Attribute type mapping.
+    sig { returns(T::Hash[Symbol, Symbol]) }
+    def self.swagger_types; end
+
+    # Initializes the object
+    # @param [Hash] attributes Model attributes in the form of hash
+    sig { params(attributes: T::Hash[T.any(String, Symbol), BasicObject]).void }
+    def initialize(attributes = {}); end
+
+    # Show invalid properties with the reasons. Usually used together with valid?
+    # @return Array for valid properties with the reasons
+    sig { returns(T::Array[String]) }
+    def list_invalid_properties; end
+
+    # Check to see if the all the properties in the model are valid
+    # @return true if the model is valid
+    returns { T::Boolean }
+    def valid?; end
+
+    # Checks equality by comparing each attribute.
+    # @param [Object] Object to be compared
+    sig { params(o: BasicObject).returns(T::Boolean) }
+    def ==(o); end
+
+    # @see the `==` method
+    # @param [Object] Object to be compared
+    sig { params(o: BasicObject).returns(T::Boolean) }
+    def eql?(o); end
+
+    # Calculates hash code according to all attributes.
+    # @return [Integer] Hash code
+    sig { returns(Integer) }
+    def hash; end
 
 {{> base_object_rbi}}
   end
