--- a/src/main/resources/RubyRbiClient/configuration_rbi.mustache
+++ b/src/main/resources/RubyRbiClient/configuration_rbi.mustache
@@ -24,7 +24,7 @@ module {{moduleName}}
     sig { params(arg0: String).returns(String) }
     def host=(arg0); end
 
-    # Defines base path
+    # Defines url base path
     sig { returns(String) }
     def base_path; end
 
