--- a/src/main/resources/RubyRbiClient/configuration_rbi.mustache
+++ b/src/main/resources/RubyRbiClient/configuration_rbi.mustache
@@ -200,39 +200,29 @@ module {{moduleName}}
     def force_ending_format=(arg0); end
 
     sig { void }
-    def initialize
-    end
+    def initialize; end
 
     # The default Configuration object.
-    def self.default
-    end
+    def self.default; end
 
-    def configure
-    end
+    def configure; end
 
-    def scheme=(scheme)
-    end
+    def scheme=(scheme); end
 
-    def host=(host)
-    end
+    def host=(host); end
 
-    def base_path=(base_path)
-    end
+    def base_path=(base_path); end
 
-    def base_url
-    end
+    def base_url; end
 
     # Gets API key (with prefix if set).
     # @param [String] param_name the parameter name of API key auth
-    def api_key_with_prefix(param_name)
-    end
+    def api_key_with_prefix(param_name); end
 
     # Gets Basic Auth token string
-    def basic_auth_token
-    end
+    def basic_auth_token; end
 
     # Returns Auth Settings hash for api client.
-    def auth_settings
-    end
+    def auth_settings; end
   end
 end
